@@ -1,0 +1,137 @@
+#!/usr/bin/python
+
+# Copyright (c) 2009, Purdue University
+# All rights reserved.
+# 
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are met:
+# 
+# Redistributions of source code must retain the above copyright notice, this
+# list of conditions and the following disclaimer.
+#
+# Redistributions in binary form must reproduce the above copyright notice, this
+# list of conditions and the following disclaimer in the documentation and/or
+# other materials provided with the distribution.
+# 
+# Neither the name of the Purdue University nor the names of its contributors
+# may be used to endorse or promote products derived from this software without
+# specific prior written permission.
+# 
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
+# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
+# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+"""Credential tool for dnsmanagement"""
+
+
+__copyright__ = 'Copyright (C) 2009, Purdue University'
+__license__ = 'BSD'
+__version__ = '#TRUNK#'
+
+
+import os
+import sys
+import getpass
+
+from optparse import OptionParser
+
+from roster_user_tools import cli_common_lib
+from roster_user_tools import roster_client_lib
+
+
+def main(args):
+  """Collects command line arguments, adds users/groups/assignments
+
+  Inputs:
+    args: list of arguments from the command line
+  """
+  name = sys.argv[0]
+  usage = ('\n'
+           '\n'
+           'To make an infinite credential:\n'
+           '\t%s -U <user-name>\n'
+           '\n'
+           'To remove a credential:\n'
+           '\t%s -r -U <user-name>\n'
+           '\n'
+           'To list credentials:\n'
+           '\t%s -l\n' % (name, name, name))
+
+  parser = OptionParser(version='%%prog (Roster %s)' % __version__,
+                        usage=usage)
+
+  parser.add_option('-U', '--user-credential', action='store', dest='new_user',
+                    help='Username to apply credential to.',
+                    metavar='<user-credential>', default=None)
+  parser.add_option('-l', '--list', action='store_true', dest='list',
+                    help='List credentials.', default=False)
+  parser.add_option('-r', '--remove', action='store_true', dest='remove',
+                    help='Remove a credential.', default=False)
+  parser.add_option('-s', '--server', action='store', dest='server',
+                    help='XML RPC Server address.', metavar='<server>',
+                    default=None)
+  parser.add_option('--config-file', action='store', dest='config_file',
+                    help='Config file location.', metavar='<file>',
+                    default=None)
+  parser.add_option('-u', '--username', action='store', dest='username',
+                    help='Run as a different username.', metavar='<username>',
+                    default=unicode(getpass.getuser()))
+  parser.add_option('-p', '--password', action='store', dest='password',
+                    help='Password string, NOTE: It is insecure to use this '
+                    'flag on the command line.', metavar='<password>',
+                    default=None)
+  parser.add_option('-c', '--cred-file', action='store', dest='credfile',
+                    help='Location of credential file.', metavar='<cred-file>',
+                    default=None)
+  parser.add_option('--cred-string', action='store', dest='credstring',
+                    help='String of credential.', metavar='<cred-string>',
+                    default=None)
+  parser.add_option('--no-header', action='store_true', dest='no_header',
+                    help='Do not display a header.', default=False)
+
+  (globals()["options"], args) = parser.parse_args(args)
+
+  try:
+    cli_common_lib_instance = cli_common_lib.CliCommonLib(options)
+  except cli_common_lib.ArgumentError, e:
+    print 'ERROR: %s' % e
+    sys.exit(1)
+
+  if( options.list and options.remove ):
+    cli_common_lib_instance.DnsError(
+        '-l/--list and -r/--remove cannot be specified simultaneously.', 1)
+  if( not options.new_user and not options.list ):
+    cli_common_lib_instance.DnsError(
+        'A user must be specified with the -U/--user-credential flag.', 1)
+
+  if( options.list ):
+    credentials = roster_client_lib.RunFunction(
+        u'ListCredentials', options.username, credfile=options.credfile,
+        credstring=options.credstring, server_name=options.server,
+        args=[options.new_user])['core_return']
+    print_list = [['user_name', 'credential_string', 'infinite_cred']]
+    for user in credentials:
+      print_list.append([user, credentials[user]['credential'],
+                         credentials[user]['infinite_cred']])
+    print cli_common_lib_instance.PrintColumns(
+        print_list, not options.no_header)
+  elif( options.remove ):
+    roster_client_lib.RunFunction(
+        u'RemoveCredential', options.username, credfile=options.credfile,
+        credstring=options.credstring, server_name=options.server,
+        kwargs={u'user_name': options.new_user})
+  else:
+    roster_client_lib.RunFunction(
+        u'MakeInfiniteCredential', options.username, credfile=options.credfile,
+        credstring=options.credstring, server_name=options.server,
+        args=[options.new_user])
+
+if __name__ == "__main__":
+    main(sys.argv[1:])
